<resources>
    <string name="app_name">SIM</string>

    <string name="inpt_EmailText">Digite seu email</string>
    <string name="inpt_PasswordText">Digite sua senha</string>
    <string name="inpt_UserText">Digite seu user name</string>

    <string name="pages_LoginText">Login</string>
    <string name="pages_RegisterText">Cadastro</string>
    <string name="pages_ChecklistText">Checklist</string>
    <string name="pages_MainText">4dx</string>
    <string name="pages_CalendarText">Calendário</string>


    //Buttons
    <string name="btn_Login">Entre</string>
    <string name="btn_register">Cadastre-se</string>


    //4dx
    <string name="qdx_work">Afinal o que é o 4DX?</string>
    <string name="criaDx_title">Crie seu 4dx</string>
    <string name="cdx_ipt_name">De um nome para o seu 4dx</string>
    <string name="cdx_ipt_mci">Digite sua MCI</string>
    <string name="cdx_ipt_data">Digite a data de conclusão</string>
    <string name="cdxipt_mdUm">Digite sua MD1</string>
    <string name="cdxipt_mdDois">Digite sua MD2</string>
    <string name="dx_btn_criaDx">Criar 4DX</string>
    <string name="qtdx_mdum">Digite sua tarefa MD1</string>
    <string name="qtdx_mdDois">Digite sua tarefa da MD2</string>
    <string name="dx_btn_task">Criar</string>
    <string name="dx_btn_addDx">Criar</string>
    <string name="ex_dxTitle">O 4DX</string>
    <string name="ex_dx">4Dx ou 4 Disciplinas da Execução é um método que te auxilia a alcançar metas e resultados de uma forma bem diferente</string>
    <string name="mcis">Fazer com que consiga atingir objetivos</string>
    <string name="mci">MCI:  Meta crucialmente importante! É o seu objetivo final.</string>
    <string name="md">MD\'s: Medidas de direções São as sub-tarefas mais importantes! Com elas você terá noção de quais tarefas escolher durante a semana.</string>
    <string name="placar">Placar</string>
    <string name="placar_expl">Nele você poderá ver seu desempenho. Lembre-se, tem que ser simples e objetivo.</string>
    <string name="funciona">Como funciona?</string>
    <string name="finalexp">A cada semana terá que cadastrar uma nova MD até a semana final. A cada semana terá que dizer se finalizou ou não a tarefa da semana anterior e escolher uma nova para a outra semana.</string>

    //Checklist_Modal
    <string name="pages_CheckListModal_TextoCria">Crie sua tarefa:</string>
    <string name="pages_CheckListModal_TextoEdit">Edite sua tarefa:</string>
    <string name="pages_CheckListModal_FormTarefa">Digite a tarefa a ser realizada:</string>
    <string name="pages_CheckListModal_FormImportancia">Informe o nível de importância da tarefa:</string>
    <string name="pages_CheckListModal_BtnCria">CRIAR</string>
    <string name="pages_CheckListModal_BtnEdita">EDITAR</string>
    <string name="pages_CheckListModal_BtnCancela">CANCELAR</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mciTitle">MCI</string>
    <string name="md1Title">MD1</string>
    <string name="md2Title">MD2</string>
    <string name="md1Desc">Comer muito chocolate até não aguentar</string>
    <string name="pages_CheckListModal_txt_tarefa_cadastrada">Tarefa cadastrada com sucesso</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mcisTitle">MCI e MDs</string>
    <string name="text_import_dx">Importar DX</string>
    <string name="dataFinal">Data final : ano-mes-dia</string>

</resources>