<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragFour"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.explainDx.PartFour">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"

        >

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="201dp"
            android:layout_gravity="center"
            android:src="@drawable/quatrodx" />

        <TextView
            android:id="@+id/TitleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placar"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorPurple"
            android:layout_margin="15dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/one"
            app:layout_constraintTop_toBottomOf="@id/TitleOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/placar_expl"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/TitleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/funciona"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorPurple"
            android:layout_margin="15dp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/two"
            app:layout_constraintTop_toBottomOf="@id/TitleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/finalexp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="20dp"
            android:gravity="center_horizontal" />


    </LinearLayout>




</FrameLayout>