<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroMdTasks">


    <TextView
        android:id="@+id/text_title"
        android:layout_marginTop="90dp"
        android:textAlignment="center"
        android:textColorHint="@color/colorBlue"
        android:hint="@string/qtdx_mdum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/input_one"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/qtdx_mdDois"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        android:inputType=
            "text|textAutoCorrect"
        />
    <EditText
        android:id="@+id/input_two"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/cdx_ipt_mci"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_one"
        android:layout_margin="2dp"
        android:inputType="text|textAutoCorrect" />

    <Button
        android:id="@+id/button"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_margin="20dp"
        android:onClick="createTaskMdUm"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_two"
        android:text="@string/dx_btn_task"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="#ff0000"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button"
        />



</androidx.constraintlayout.widget.ConstraintLayout>