<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragThree"
    tools:context=".fragments.explainDx.PartThree">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"

        >

        <ImageView
            android:id="@+id/image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/menina"
            android:layout_gravity="center"
            />


        <TextView
            android:id="@+id/TitleTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mcisTitle"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorPurple"
            android:layout_margin="15dp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:text="@string/mci"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="40dp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/twoB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/two"
            android:text="@string/md"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center_horizontal" />




    </LinearLayout>


</FrameLayout>