<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/simcor"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:textStyle="bold"
        android:text="@string/pages_LoginText"
        android:textColor="@color/colorPrimary"
        android:textSize="35dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <EditText
        android:id="@+id/ipt_email"
        android:layout_marginTop="50dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/inpt_EmailText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        android:inputType=
            "text|textAutoCorrect"
        />

    <TextView
        android:id="@+id/alertEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipt_email"
        />

    <EditText
        android:id="@+id/ipt_password"
        android:layout_marginTop="20dp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/inpt_PasswordText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertEmail"
        android:inputType="textPassword"

        />

    <TextView
        android:id="@+id/alertPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-medium"
        android:visibility="gone"
        android:textStyle="bold"
        android:textColor="@color/colorRed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ipt_password"
        />


    <Button
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:layout_width="300dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_margin="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/alertPassword"
        android:text="@string/btn_Login"
        android:onClick="onClick"
        />

    <TextView
        android:id="@+id/goTo"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:text="Cadastre-se"
        android:textColor="#803D393F"
        android:textSize="15dp"
        android:onClick="goToRegister"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        />

    <TextView
        android:id="@+id/goToA"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:textStyle="normal"
        android:text="TesteFrags"
        android:textColor="#803D393F"
        android:textSize="15dp"
        android:onClick="goToA"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/goTo"
        />




</androidx.constraintlayout.widget.ConstraintLayout>